recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.error
Sierpinski:8: error: not found: value avence
    avence(length)
    ^